@@ -1,4 +1,3 @@
-Drop deprecated static CorrelationAnalysis::PearsonCorrelation|SpearmanCorrelation|PCC|PRCC
 Remove Distribution.getStandardMoment
 Drop deprecated LinearModelAlgorithm | LinearModelStepwiseAlgorithm ctors for 1.21
 Remove FunctionalChaosAlgorithm(Function) ctors for 1.21
